--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -7,7 +7,7 @@ SESSION=Sessione
 \ (LOADING)=\ (caricamento in corso)
 OTHER=Altro
 DELETE\ NODE=Elimina nodo
-ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione del nodo, vedil log degli errori nel menu Guida per maggiori informazioni.
+ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione del nodo, vedi log degli errori nel menu Guida per maggiori informazioni.
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile caricare {0} postazioni. Vedi log degli errori per maggiori dettagli.
 ERROR=Errore
 COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=Impossibile trovare o caricare le postazioni. Verranno aggiunte le postazioni di default.
@@ -38,7 +38,7 @@ LICENSE=Licenza
 ABOUT\ {0}=Informazioni su {0}
 CLOSE=Chiudi
 DISPLAY\ LICENSE=Visualizza licenza
-ABOUTBOXTEXT=Archive Builder\n\u00c8 uno strumento locale per l'organizzazione di dati linguistici.\nMax Planck Institute for Psycholinguistics\n\nApplicazione progettata o sviluppata da {0}\nMantenimento ed estensioni a cura di {1}\nArbil si serve inolre di componenti di IMDI API e Lamus Type Checker\n\nVersione: {2} {3} {4}\n{5}\nData di compilazione: {6}\n\nVersione Java: {7}\nFornitore: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nArbil dispone della GNU General Public License versione 2.\nClicca sul pulsante sottostante per vedere la versione completa della licenza.\n
+ABOUTBOXTEXT=Archive Builder\nUno strumento locale per l'organizzazione di dati linguistici.\nMax Planck Institute for Psycholinguistics\n\nApplicazione progettata o sviluppata da {0}\nMantenimento ed estensioni a cura di {1}\nArbil si serve inolre di componenti di IMDI API e Lamus Type Checker\n\nVersione: {2} {3} {4}\n{5}\nData di compilazione: {6}\n\nVersione Java: {7}\nFornitore: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nArbil dispone della GNU General Public License versione 2.\nClicca sul pulsante sottostante per vedere la versione completa della licenza.\n
 SAVE\ TO\ DISK?=Salvare su disco?
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=Impossibile caricare {0} postazioni. Vedi log degli errori per maggiori dettagli.
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Tutte le modifiche a {0} ancora in sospeso veranno salvate. Continuare?
@@ -46,8 +46,8 @@ FIELD\ NAME=Nome campo
 VALUE=Valore
 RESOURCE=Risorsa
 NOT\ SUPPORTED=Non supportato
-MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Trasferimento da metadati IMDI a metadati CMDI attualmente non supportato
-INSERT\ NODE\ ERROR=Inserisci errore nodo
+MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Trasferimento dei metadati IMDI ai file di metadati CMDI attualmente non supportato
+INSERT\ NODE\ ERROR=Errore durante l'inserimento del nodo
 ERROR\ MOVING\ NODES=Errore nello spostamento dei nodi
 COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Impossibile spostare %s a causa di un errore. Vedi log degli errori per maggiori dettagli. Continuare lo spostamento dei nodi? 
 CANCEL=Annulla
@@ -61,15 +61,15 @@ SELECT\ NODES\ TO\ EXPORT=Seleziona nodi da esportare
 NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=Nessun nodo selezionato. Selezionare almeno un nodo da esportare.
 AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Errore durante l'esportazione dei preferiti:\n%s\nVedi log degli errori per maggiori dettagli.
 EXPORT\ COMPLETE=Esportazione completata
-FAVOURITES\ HAVE\ BEEN\ EXPORTED=Esportazione preferiti avvenuta con successo
+FAVOURITES\ HAVE\ BEEN\ EXPORTED=Esportazione dei preferiti avvenuta con successo
 FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Errore durante l'importazione dei preferiti:\n%s\nVedi log degli errori per maggiori dettagli.
 IMPORT\ COMPLETE=Importazione completata
-FAVOURITES\ HAVE\ BEEN\ IMPORTED=Importazione preferiti avvenuta con successo
+FAVOURITES\ HAVE\ BEEN\ IMPORTED=Importazione dei preferiti avvenuta con successo
 EXPORT\ SELECTION=Esporta selezione
 REFRESH=Aggiorna
 IMPORT\ FROM\ DISK=Importa da disco
 FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=La cartella dovrebbe contenere un file denominato %s.
-FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Clicca sul tasto Importa e seleziona una cartella esistente contenente una serie di preferiti precedentemente esportati.
+FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Clicca su 'Importa' e seleziona una cartella esistente contenente una serie di preferiti precedentemente esportati.
 EXPORT\ FAVOURITES=Esporta preferiti
 IMPORT\ FAVOURITES=Importa preferiti
 PREVIOUS=Precedente
@@ -85,27 +85,27 @@ FINISH=Fine
 ARBIL\ WIZARD=Procedura guidata di Arbil
 DO\ YOU\ REALLY\ WANT\ TO\ CANCEL\ THE\ WIZARD?=Sei sicuro di voler annullare la procedura guidata?
 ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Errore nel testo della procedura guidata. Vedi log degli errori per maggiori dettagli.
-SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Seleziona preferiti esportati per importazione
-FAVOURITES\ EXPORT\ FILE=File di preferiti esportati
+SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Seleziona preferiti esportati da importare
+FAVOURITES\ EXPORT\ FILE=File dei preferiti esportati
 FAVOURITES_SELECT\ ONE\ OR\ MORE\ FAVOURITES\ THAT\ YOU\ WISH\ TO\ EXPORT=Seleziona uno o pi\u00f9 preferiti da esportare dalla lista sottostante, clicca su 'Esporta'. Seleziona la cartella di destinazione dove esportare i preferiti selezionati.\n\nSuggerimento: puoi utilizzare i tasti di modifica sulla tastiera per selezionare o deselezionare individualmente i preferiti (CTRL o CMD), o per selezionarne una serie (SHIFT).\n
 DISCARD\ CHANGES=Ignora modifiche
 DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=L'elenco delle postazioni remote verr\u00e0 ripristinato. Tornare al passaggio precedente della procedura guidata?
 SETUP_NO\ LOCATIONS\ SPECIFIED=Nessuna postazione specificata
-SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stata specificata nessuna postazione. Continuare?
+SETUP_YOU\ HAVE\ NOT\ YET\ SPECIFIED\ ANY\ REMOTE\ LOCATIONS.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stata specificata nessuna postazione. Sei sicuro di voler continuare?
 SETUP_SELECT\ A\ METADATA\ FORMAT=Seleziona un formato per i metadati
 SETUP_SELECT\ AT\ LEAST\ ONE\ OF\ THE\ OPTIONS\ BEFORE\ CONTINUING=Seleziona almeno una delle opzioni prima di continuare
 SETUP_NO\ PROFILES\ SELECTED=Nessuno profilo selezionato
-SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stato selezionato nessun profilo. Continuare?
+SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Non \u00e8 ancora stato selezionato nessun profilo. Sei sicuro di voler continuare?
 SETUP_CLARIN\ PROFILES=Profili Clarin
 CANCEL\ WIZARD=Annulla procedura guidata
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostra solo campi selezionati (tutti gli altri verranno nascosti e i campi nascosti sostituiti)
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostra solo campi selezionati (tutti gli altri verranno nascosti e l'opzione 'nascondi campi' ignorata)
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Larghezza non valida per colonna {0}
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Larghezza colonna
 FIELD_VIEW_TABLE_HIDE=Nascondi
 FIELD_VIEW_TABLE_SHOW\ ONLY=Mostra solo
 FIELD_VIEW_TABLE_COLUMN\ NAME=Nome colonna
 FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Nascondi campi selezionati (attivo solo quando l'opzione 'Mostra solo' non \u00e8 stata selezionata)
-ARBIL\ LOG\ CONSOLE=Console del log Arbil
+ARBIL\ LOG\ CONSOLE=Console del log di Arbil
 SEARCH_STOP=interrompi
 SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=cercato: {0}/{1} trovato: {2}
 SEARCH\ CANCELED=ricerca annullata
@@ -120,15 +120,15 @@ CONTINUE?=Continuare?
 THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=L'operazione 'Incolla' comporter\u00e0 l''eliminazione del contenuto di {0} campo/i.
 TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Due campi con lo stesso nome devono essere incollati in questa tabella,\nuno dei due campi verr\u00e0 sostituito dall'altro.\n
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=Il numero delle colonne presenti nei dati da incollare \u00e8 inconsistente.\nI dati incollati potrebbero essere errati.\n
-INCORRECT\ DATA\ TO\ PASTE=Dati da incollare errati.\nI dati devono essere copiati da una tabella dove solo un file IMDI viene visualizzato,\noppure selezionando singolarmente le celle della tabella.
+INCORRECT\ DATA\ TO\ PASTE=Dati da incollare errati.\nI dati devono essere copiati da una tabella contenente un solo nodo,\noppure selezionando singolarmente le celle della tabella.
 PASTE=Incolla
 FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD=%d campi verranno sostituiti con il valore singolo sulla clipboard.\nContinuare?
 SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=visualizzazione del menu intestazione per colonna {}
 NO\ ROWS\ SELECTED=Nessuna riga selezionata
 PASTE\ INTO\ TABLE=Incolla nella tabella
 TABLE\ COPY=Copia della tabella
-NOTHING\ SELECTED\ TO\ COPY=Nessun elemento da copiare selezionato
-COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=Impossibile impostare gli attributi per il nuovo campo. Vedi log degli errori per maggiori dettagli.
+NOTHING\ SELECTED\ TO\ COPY=Nessun elemento elezionato per la copia
+COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=Impossibile impostare gli attributi per il nuovo campo. Vedi log degli errori per maggiori dettagli
 ERROR\ WHILE\ SETTING\ ATTRIBUTES\ ON\ FIELD=Errore durante l'impostazione degli attributi del campo
 THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=Il nodo '%1$s' non pu\u00f2 contenere un campo dello stesso tipo di '%2$s' in '%3$s'
 COULD\ NOT\ CREATE\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile creare il campo. Vedi log degli errori per maggiori dettagli.
@@ -140,10 +140,10 @@ DELETE\ FIELD=Elimina campo
 DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Eliminare %1$d esempi(o) del campo '%2$s'?
 CANNOT\ DELETE=Impossibile eliminare
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Questo campo non pu\u00f2 essere eliminato da uno o pi\u00f9 dei nodi visualizzati
-A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Un tipo di visualizzazione con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
-SAVE\ COLUMN\ VIEW=Salva vista colonna
-ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Inserisci nome per salvare questo tipo di visualizzazione come
-EDITING\ CURRENT\ COLUMN\ VIEW=Modifica in corso del tipo di visualizzazione corrente
+A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Una visualizzazione a colonna con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
+SAVE\ COLUMN\ VIEW=Salva visualizzazione a colonna
+ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Inserisci nome per salvare questo tipo di visualizzazione a colonna come
+EDITING\ CURRENT\ COLUMN\ VIEW=Modifica in corso della visualizzazione a colonna corrente
 SHOW\ CHILD\ NODES=Mostra nodi figli
 SELECT\ THE\ CHILD\ NODE\ TYPE\ TO\ DISPLAY=Selezionare il tipo di nodo figlio da visualizzare
 FOUND\ %D\ MATCHING\ ROWS=Trovate %d righe corrispondenti
@@ -166,12 +166,12 @@ ERROR\ ADDING\ RESOURCE=Errore durante l'aggiunta di risorse
 COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere la risorsa ai metadati. Vedi log degli errori per maggiori dettagli.
 INVALID\ URI=URI non valido
 THE\ URI\ ENTERED\ AS\ A\ RESOURCE\ LOCATION\ IS\ INVALID.\ PLEASE\ CHECK\ THE\ LOCATION\ AND\ TRY\ AGAIN.=L'URI inserito come postazione della risorsa non \u00e8 valido. Controllare nuovamente la postazione e riprovare.
-MANUAL\ RESOURCE\ LOCATION=Postazione risorsa manuale
+MANUAL\ RESOURCE\ LOCATION=Postazione manuale della risorsa 
 ENTER\ THE\ RESOURCE\ URI\:=Inserisci URI della risorsa:
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=Impossibile determinare la postazione originale
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ NODE\ TYPE=Impossibile determinare il tipo originale di nodo
 RE\ IMPORT\ BRANCH=Importa di nuovo il ramo
-ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Aggiungendo un nodo, le modifiche a "%s" ancora in sospeso verranno salvate sul disco. Procedere?
+ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Aggiungendo un nodo, le modifiche a "%s" ancora in sospeso verranno salvate sul disco. Continuare?
 PROFILES_REFRESH\ LIST=Aggiorna elenco
 PAGE\ NOT\ FOUND=Pagina non trovata
 CONTENTS=Sommario
@@ -202,7 +202,7 @@ ADD\ PROFILE=Aggiungi profilo
 ENTER\ THE\ PROFILE\ URL=Inserisci l'URL del profilo
 PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Aggiungi un profilo URL alla lista
 PROFILES_ADD\ URL=Aggiungi URL
-PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=I profili selezionati saranno disponibili nel menu 'Aggiungi' del corpus locale.\nPer impostazione predefinita, soltanto i profili selezionati verranno scaricati per uso offline.\n
+PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=I profili selezionati saranno disponibili nel menu 'Aggiungi' del corpus locale. Per impostazione predefinita, soltanto i profili selezionati verranno scaricati per uso offline.\n
 ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Carica solo profili selezionati per modifica manuale
 PROFILES_DOWNLOAD\ ALL\ PROFILES\ FOR\ OFFLINE\ USE\ (INCLUDING\ UNSELECTED\ PROFILES)=Scarica tutti i profili per uso offline (anche quelli non selezionati)
 PROFILES_DOWNLOAD\ ALL=Scarica tutto
@@ -241,7 +241,7 @@ ATTRIBUTE\ OF\ {0}=Attributo di {0}
 REPLACE\ EXISTING\ LOCATION?=Sostuituire postazione esistente?
 NEW\ LOCATION=Nuova postazione
 REPLACE=Sostituisci
-OVERWRITE\ FILE?=Sostituire file?
+OVERWRITE\ FILE?=Sostituire il file?
 THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=Il seguente file esiste gi\u00e0 nella postazione di destinazione:\n\n%s\n\nSostituirlo?
 DETAILS=Dettagli
 PERFORMCOPY=Eseguire la copia
@@ -258,7 +258,7 @@ IMPORT_EXPORT_START=Avvia
 IMPORT_EXPORT_STOP=Interrompi
 IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Autenticazione Shibboleth con metodo SURFnet
 IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limita caratteri nei nomi dei file (formato adatto a LAMUS)
-IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rinomina file di metadati (devono corrispondere ai nomi dell'albero del corpus locale)
+IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rinomina i file di metadati (devono corrispondere ai nomi nell'albero del corpus locale)
 SHOW\ ERRORS\ IN\ TABLE=Mostra errori nella tabella
 RESOURCE\ COPY\ ERRORS=Errori nella copia delle risorse
 IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Se si seleziona la copia dei file di risorse, eventuali errori presenti nella copia dei file verranno riportati qui.
@@ -304,10 +304,10 @@ SAVE=Salva
 ERROR\ SAVING\ CHANGES\ TO\ DISK,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante il salvataggio delle modifiche sul disco, vedi il log degli errori nel menu Guida per maggiori informazioni.
 UNKNOWN\ ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Errore sconosciuto durante la creazione del nodo di risorse per l'URI: {0}
 ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Errore durante la creazione del nodo di risorse per l'URI: {0}
-COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile eliminare i nodi a causa di un errore durante il salvataggio della cronologia per il nodo. Vedi log degli errori per maggiori dettagli.
+COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile eliminare i nodi a causa di un errore durante il salvataggio della cronologia del nodo. Vedi log degli errori per maggiori dettagli.
 ERROR\ WHILE\ MOVING\ NODES=Errore durante lo spostamento dei nodi
-COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile spostare i nodi a causa di un errore durante il salvataggio della cronologia per il nodo. Vedi log degli errori per maggiori dettagli.
-{0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} esiste gi\u00e0 in {1} e non verr\u00e0 aggiunto di nuovo
+COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile spostare i nodi a causa di un errore durante il salvataggio della cronologia del nodo. Vedi log degli errori per maggiori dettagli.
+{0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} esiste gi\u00e0 in {1} e non verr\u00e0 aggiunto nuovamente
 CANNOT\ LINK\ OR\ MOVE\ A\ NODE\ INTO\ ITSELF=Impossibile collegare o spostare un nodo dentro se stesso
 LOADING\ ERROR=Errore durante il caricamento
 ERROR\ ADDING\ NODE,\ COULD\ NOT\ WAIT\ FOR\ FILE\ TO\ LOAD=Errore durante l'aggiunta del nodo, impossibile attendere il caricamento del file
@@ -315,7 +315,7 @@ NODES\ OF\ THIS\ TYPE\ CANNOT\ BE\ PASTED\ INTO\ AT\ THIS\ STAGE=In questa fase,
 PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=La stringa incollata non \u00e8 un file IMDI
 THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=Il file di destinazione non \u00e8 nella cache
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Impossibile incollare i sottonodi della sessione in un corpus
-THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=Il file di destinazione del nodo non esiste
+THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=Il file del nodo di destinazione non esiste
 COPYING\ WITH\ UNSAVED\ CHANGES=Copia in corso con modifiche non salvate
 SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Alcuni dei nodi da copiare contengono modifiche non salvate.\nSe non salvate, tali modifiche non verranno visualizzate nei nodi risultanti. Continuare comunque?
 THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=La postazione esiste gi\u00e0 e non verr\u00e0 aggiunta nuovamente
@@ -334,3 +334,5 @@ COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=Impossibile eliminare il 
 EXPORT_TO\:\ =A:
 EXPORT_FROM\:\ =Da:
 <P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione I/O durante la lettura del contenuto della guida</strong></p>
+XSDCHECKER=XSD checker 
+LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Lingue da inserire nell'elenco a tendina del campo 'Descrizione' (IMDI)
