--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
@@ -4,39 +4,39 @@ COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.
 LOAD\ IMDI\ FILES=Cargar archivos IMDI
 A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=Se ha encontrado un atributo DOM id en uno o m\u00e1s de los archivos, \u00e9stos deber\u00e1n ser guardados para corregir el problema.
 INSERT\ FROM\ TEMPLATE=Insertar desde plantilla
-ERROR\ READING\ TEMPLATE=Errora al leer la plantilla
+ERROR\ READING\ TEMPLATE=Error al leer la plantilla
 ADD\ FROM\ TEMPLATE=Agregar desde plantilla
 ERROR\ INSERTING\ CREATE\ DATE=Error al insertar fecha de creaci\u00f3n
 ADD\ RESOURCE=Agregar recurso
 #{0} is the name of a newly added node, {1} is parent node for this node in the table. This string is used as the title of the table that appears after adding a new node. E.g. 'New Actor in Standard Session'
-NEW\ {0}\ IN\ {1}=Nuevo {0} en {1}
+NEW\ {0}\ IN\ {1}=Nuevo/a {0} en {1}
 #{0} is the name of the newly added top level node (e.g. Session). This string is used as the title of the table that appears after adding a new node. E.g. 'New Session'.
-NEW\ {0}=Nuevo {0}
-INSERT\ NODE\ ERROR=Error al insertar el nodo
+NEW\ {0}=Nuevo/a {0}
+INSERT\ NODE\ ERROR=Error al insertar nodo
 ADD\ NODE=Agregar nodo
 NEW\ RESOURCE\ IN\ %S=Nuevo recurso en %s
 NEW\ RESOURCES\ IN\ %S=Nuevo recursos en %s
 #{0} is a mimetype string (which represents the exact file type of a resource, see https://en.wikipedia.org/wiki/Mimetype)
-THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ \"{0}\".=
-THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=El archivo podr\u00eda ser no archivable. Se puede proceder de todas formas seleccionando el tipo de recurso manualmente.
-DO\ YOU\ WANT\ TO\ PROCEED?=\u00bfContinuar?
+THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=No hay ning\u00fan vocabulario controlado para los recursos escritos o los archivos multimediales que coincidan con "{0}".
+THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=El archivo podr\u00eda ser no archivable. Se puede continuar de todas formas seleccionando el tipo de recurso manualmente.
+DO\ YOU\ WANT\ TO\ PROCEED?=\u00bfSe desea continuar?
 WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=\u00a1ADVERTENCIA: Esto no garantiza que los datos se puedan cargar en el servidor del corpus!
-ERROR\ READING\ VIA\ THE\ IMDI\ API=Error al leer mediante IMDI API
-MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Sobrescrito manualmente (posible incompatibilidad con el archivo)
+ERROR\ READING\ VIA\ THE\ IMDI\ API=Error al leer con IMDI API
+MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Sustituido manualmente (posible incompatibilidad con el archivo)
 CANCEL=Cancelar
-THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=El chequeo de tipos no reconoce el/los archivo(s) seleccionado(s), esto significa que no son archivables. Con esta operaci\u00f3n se anular\u00e1 la decisi\u00f3n y se podr\u00e1(n) agreagar el/los archivos (recursos multimediales o escritos) a una sesi\u00f3n, aunque pueda resultar imposible importar los resultados de la operaci\u00f3n en el servidor del corpus.
+THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=El chequeo de tipos no reconoce el/los archivo(s) seleccionado(s), esto significa \nque no es/son archivable(s). Con esta operaci\u00f3n se anular\u00e1 la decisi\u00f3n y se podr\u00e1(n) \nagreagar el/los archivos (recursos multimediales o escritos) a una sesi\u00f3n, aunque pueda\nresultar imposible importar los resultados de la operaci\u00f3n en el servidor del corpus.
 OVERRIDE\ TYPE\ CHECKER\ DECISION=Anular decisi\u00f3n del chequeo de tipos
-ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Error al leer uno de los enlaces mediante IMDI API
+ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Error al leer uno de los enlaces con IMDI API
 GET\ LINKS=Obtener enlaces
-ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Error al leer los enlaces mediante IMDI API 
+ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Error al leer los enlaces con IMDI API 
 REMOVE\ IMDI\ LINKS=Remover los enlaces IMDI
 COPY\ IMDI\ FILE=Copiar archivo IMDI
-ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error al leer mediante IMDI API. Ver registro de errores para m\u00e1s detalles.
+ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error al leer con IMDI API. Ver registro de errores para m\u00e1s detalles.
 ADD\ LINK=Agregar enlace
 #%s is the file name of the template that could not be opened
-COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =No se pudo abrir el archivo plantilla: %s. Ver registro de errores para m\u00e1s detalles
+COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =No se pudo abrir el archivo plantilla requerido: %s. Ver registro de errores para m\u00e1s detalles
 LOAD\ TEMPLATE=Cargar plantilla
-THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=no se pudo leer la plantilla requerida.
+THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=No se pudo leer la plantilla requerida.
 DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Categor\u00eda de datos: <{0}>. Ninguna descripci\u00f3n disponible. Ver registro de errores para m\u00e1s detalles.
 #{0} is the name of a field (e.g. Actor name) that has no usage description
 NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Ninguna descripci\u00f3n de uso encontrada en esta plantilla para {0}
@@ -44,27 +44,27 @@ NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Ninguna descripci\
 COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =No se pudo leer el archivo plantilla requerido: %s. Ver registro de errores para m\u00e1s detalles
 LOAD\ CLARIN\ TEMPLATE=Cargar plantilla Clarin
 FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=No se pudo remover el proxy recurso con id {0}
-UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Relaci\u00f3n inesperada entre la ruta de acceso de origen y de destino. ver registro de errores para m\u00e1s detalles.
+UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Relaci\u00f3n inesperada entre la ruta de acceso de origen y la de destino. Ver registro de errores para m\u00e1s detalles.
 INSERT\ NODE=Insertar nodo
 COULD\ NOT\ READ\ THE\ XML\ SCHEMA=No se pudo leer el esquema XML
-ERROR\ INSERTING\ NODE=Error al insertar el nodo
+ERROR\ INSERTING\ NODE=Error al insertar nodo
 NO\ TEMPLATE\ FOUND\ FOR=Ninguna plantilla encontrada para: {0}
 #{0} is the location of the current project, {1} is the location of the project to be switched to
 CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Cambio del proyecto actual de:\n{0}\na:\n{1}
-ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil deber\u00e1 cerrar todas las tablas despu\u00e9s de mover los archivos.\n\u00bfContinuar?
+ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil deber\u00e1 cerrar todas las tablas despu\u00e9s de mover los archivos.\n\u00bfSe desea continuar?
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error al guardar la configuraci\u00f3n como
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=No se pudo mover los archivos contenidos en el 'Corpus local' en la ubicaci\u00f3n requerida.\nSe puede anular la operaci\u00f3n (no habr\u00e1 ning\u00fan cambio), o modificar el directorio de trabajo.\nEn el segundo caso, los archivos corpus y los archivos sesi\u00f3n contenidos en el 'Corpus local' se desplazar\u00e1n al \u00e1rbol 'Directorios de trabajo' y deber\u00e1n importarse manualmente.\n\u00bfModificar de todas formas el directorio de trabajo?\n
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=No se pudo mover los archivos contenidos en el 'Corpus local' en la ubicaci\u00f3n requerida.\nSe puede anular la operaci\u00f3n (no habr\u00e1 ning\u00fan cambio), o modificar el directorio de trabajo.\nEn el segundo caso, los archivos corpus y los archivos sesi\u00f3n contenidos en el 'Corpus local' \nse desplazar\u00e1n al \u00e1rbol 'Directorios de trabajo' y deber\u00e1n importarse manualmente.\n\u00bfModificar de todas formas el directorio de trabajo?\n
 ERROR\ SAVING\ CONFIGURATION=Error al guardar la configuraci\u00f3n
 #{0} is the filename the configuration should be written to
-COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=No se pudo escribir la nueva configuraci\u00f3n como {0}
+COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=No se pudo escribir la nueva configuraci\u00f3n en {0}
 COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=No se pudo escribir en el directorio de trabajo. \u00a1Comprobaci\u00f3n de actualizaciones err\u00f3nea!
-THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Ha ocurrido un error durante la actualizaci\u00f3n de la aplicaci\u00f3n.\nIr al sitio web y actualizar mediante el enlace de descarga.\n
-THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Hay una nueva versi\u00f3n disponible.\nIr al sitio web y actualizar mediante el enlace de descarga.
+THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Ha ocurrido un error durante la actualizaci\u00f3n de la aplicaci\u00f3n.\nActualizar con el enlace de descarga del sitio web.\n\n
+THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Hay una nueva versi\u00f3n disponible.\nActualizar con el enlace de descarga del sitio web.
 THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Ha ocurrido un error al reiniciar la aplicaci\u00f3n.\nLa actualizaci\u00f3n tendr\u00e1 efecto despu\u00e9s del pr\u00f3ximo reinicio de la aplicaci\u00f3n.\n
 ERROR=Error
-There\ is\ a\ new\ version\ available=Hay una nueva versi\u00f3n disponible\n\u00bfActualizar ahora?
+There\ is\ a\ new\ version\ available=Hay una nueva versi\u00f3n disponible\n\u00bfSe desea actualizar ahora?
 #Journal is a 'logbook' that tracks all actions taken in Arbil
 FAILED\ TO\ PASS\ THE\ JOURNAL\ TO\ THE\ REQUESTED\ PLUGIN=No se pudo pasar el registro al complemento requerido.
 FAILED\ TO\ ACTIVATE\ THE\ REQUESTED\ PLUGIN=No se pudo activar el complemento requerido.
