--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -35,10 +35,10 @@ SAVE\ CHANGES=Guardar los cambios
 THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Hay cambios sin guardar.\n\u00bfGuardar ahora?
 ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error en la visualizazi\u00f3n de la licencia. Ver registro de errores para m\u00e1s detalles.
 LICENSE=Licencia
-ABOUT\ {0}=Sobre {0}
+ABOUT\ {0}=Acerca de {0}
 CLOSE=Cerrar
 DISPLAY\ LICENSE=Mostrar licencia
-ABOUTBOXTEXT=Archive Builder\nUna herramienta local para la organizaci\u00f3n de datos ling\u00fc\u00edsticos.\nMax Planck Institute for Psycholinguistics\n\nAplicaci\u00f3n dise\u00f1ada y desarrollada por {0}\nMantenimiento y extensiones por {1}\nArbil utiliza tambi\u00e9n componentes de IMDI API y de Lamus Type Checker\n\nVersi\u00f3n: {2} {3} {4}\nProveedor: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nLa licencia da Arbil ha sido concedida por la GNU General Public License versi\u00f3n 2.\nHacer un click en el bot\u00f3n aqu\u00ed abajo para ver la versi\u00f3n completa de esta licencia.
+ABOUTBOXTEXT=Archive Builder\nUna herramienta local para la organizaci\u00f3n de datos ling\u00fc\u00edsticos.\nMax Planck Institute for Psycholinguistics\n\nAplicaci\u00f3n dise\u00f1ada y desarrollada por {0}\nMantenimiento y extensiones por {1}\nArbil utiliza tambi\u00e9n componentes de IMDI API y de Lamus Type Checker\n\nVersi\u00f3n: {2} {3} {4}\n{5}\nFecha de compilaci\u00f3n: {6}\n\nVersi\u00f3n Java: {7}\nProveedor: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nLa licencia da Arbil ha sido concedida por la GNU General Public License versi\u00f3n 2.\nSeleccionar Mostrar licencia para ver la versi\u00f3n completa de esta licencia.
 SAVE\ TO\ DISK?=\u00bfGuardar en el disco?
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=No se pudieron cargar {0} ubicaciones. Ver registro de errores para m\u00e1s detalles.
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Todos los cambios pendientes a {0} se guardar\u00e1n en el disco. \u00bfContinuar?
@@ -294,7 +294,7 @@ TEMPLATES=Plantillas
 THE\ TEMPLATE\ {0}\ COULD\ NOT\ BE\ CREATED.=No se pudo crear la plantilla "{0}".
 %S\ (INTERNAL)=%s (interno)
 LOADING\ NODE...=cargando nodo...
-HISTORY_LAST\ SAVE=\u00daltima modificaci\u00f3n
+HISTORY_LAST\ SAVE=\u00daltima grabaci\u00f3n
 COPY\ OF\ {0}=copia de {0}
 FILE\ NOT\ FOUND=No se encontr\u00f3 el archivo
 COULD\ NOT\ LOAD\ DATA=No se pudieron cargar los metadatos
