--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
@@ -9,29 +9,29 @@ ADD\ FROM\ TEMPLATE=Aggiungi da modello
 ERROR\ INSERTING\ CREATE\ DATE=Errore nell'inserimento della data di creazione
 ADD\ RESOURCE=Aggiungi risorsa
 #{0} is the name of a newly added node, {1} is parent node for this node in the table. This string is used as the title of the table that appears after adding a new node. E.g. 'New Actor in Standard Session'
-NEW\ {0}\ IN\ {1}=Nuovo {0} in {1}
+NEW\ {0}\ IN\ {1}=Nuovo/a {0} in {1}
 #{0} is the name of the newly added top level node (e.g. Session). This string is used as the title of the table that appears after adding a new node. E.g. 'New Session'.
-NEW\ {0}=Nuovo {0}
+NEW\ {0}=Nuovo/a {0}
 INSERT\ NODE\ ERROR=Errore nell'inserimento del nodo
 ADD\ NODE=Aggiungi nodo
 NEW\ RESOURCE\ IN\ %S=Nuova risorsa in %s
 NEW\ RESOURCES\ IN\ %S=Nuove risorse in %s
 #{0} is a mimetype string (which represents the exact file type of a resource, see https://en.wikipedia.org/wiki/Mimetype)
-THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ \"{0}\".=
+THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=Non esiste nessun elenco di parole per le risorse scritte o i file multimediali che corrisponda a "{0}".
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=Il file potrebbe non essere archiviabile. Si pu\u00f2 comunque procedere selezionando manualmente il tipo di risorsa.
-DO\ YOU\ WANT\ TO\ PROCEED?=Continuare?
+DO\ YOU\ WANT\ TO\ PROCEED?=Si desidera continuare?
 WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=AVVISO: L'operazione non garantisce che i dati possano essere caricati sul server del corpus!
-ERROR\ READING\ VIA\ THE\ IMDI\ API=Errore nella lettura tramite IMDI API
+ERROR\ READING\ VIA\ THE\ IMDI\ API=Errore nella lettura con IMDI API
 MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Sostituito manualmente (possibile incompatibili\u00e0 con l'archivio)
 CANCEL=Annulla
-THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=Il type checker non riconosce il/i file selezionato/i, il che significa che non sono archiviabili. L'operazione ignorer\u00e0 il messaggio e permetter\u00e0 di aggiungere il/i file (risorse multimediali o scritte) alla sessione, tuttavia potrebbe non essere possibile importare il risultato di tale operazione nel server del corpus.
+THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=Il type checker non riconosce il/i file selezionato/i, il che significa che non\n\u00e8/sono archiviabile/i. L'operazione ignorer\u00e0 il messaggio e permetter\u00e0 di \naggiungere il/i file (risorse multimediali o scritte) alla sessione, tuttavia potrebbe\nnon essere possibile importare il risultato di tale operazione nel server del corpus.
 OVERRIDE\ TYPE\ CHECKER\ DECISION=Ignora decisione del type checker
-ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Errore nella lettura di uno dei link tramite IMDI API
+ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Errore nella lettura di uno dei link con IMDI API
 GET\ LINKS=Ottieni link
-ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Errore nella lettura dei link tramite IMDI API
+ERROR\ READING\ LINKS\ VIA\ THE\ IMDI\ API=Errore nella lettura dei link con IMDI API
 REMOVE\ IMDI\ LINKS=Rimuovi link IMDI
 COPY\ IMDI\ FILE=Copia file IMDI
-ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore nella lettura tramite IMDI API. Vedi log degli errori per maggiori dettagli.
+ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore nella lettura con IMDI API. Vedi log degli errori per maggiori dettagli.
 ADD\ LINK=Aggiungi link
 #%s is the file name of the template that could not be opened
 COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Impossibile aprire il file modello richiesto: %s. Vedi log degli errori per maggiori dettagli
@@ -39,7 +39,7 @@ LOAD\ TEMPLATE=Carica modello
 THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=Impossibile leggere il modello richiesto.
 DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Categoria dati: <{0}>. Nessuna descrizione disponibile. Vedi log degli errori per maggiori dettagli.
 #{0} is the name of a field (e.g. Actor name) that has no usage description
-NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Nessuna descrizione d'uso trovata in questo modello per: {0}
+NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Nessuna descrizione di utilizzo trovata in questo modello per: {0}
 #%s is the filename of the template
 COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Impossibile leggere il file del modello richiesto: %s. Vedi log degli errori per maggiori dettagli
 LOAD\ CLARIN\ TEMPLATE=Carica modello Clarin
@@ -51,17 +51,17 @@ ERROR\ INSERTING\ NODE=Errore durante l'inserimento del nodo
 NO\ TEMPLATE\ FOUND\ FOR=Nessun modello trovato per: {0}
 #{0} is the location of the current project, {1} is the location of the project to be switched to
 CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Spostamento del progetto attuale da:\n{0}\na:\n{1}
-ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil dovr\u00e0 chiudere tutte le tabelle una volta spostati i file.\nContinuare?
+ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil dovr\u00e0 chiudere tutte le tabelle una volta spostati i file.\nSi desidera continuare?
 #{0} is the filename the configuration should be written to
-ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Errore nel salvataggio della configurazione con {0}
+ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Errore nel salvataggio della configurazione in {0}
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Non \u00e8 stato possibile spostare i file contenuti nel 'Corpus locale' nella postazione richiesta.\n\u00c8 possibile annullare l'operazione ora (senza che venga effettuata alcuna modifica), o modifica la cartella di lavoro.\nIn quest'ultimo caso, gli eventuali file corpus o sessione presenti nel 'Corpus locale' verranno spostati nell'albero 'Cartelle di lavoro' e dovranno essere importati manualmente.\nModificare comunque la cartella di lavoro?\n
-ERROR\ SAVING\ CONFIGURATION=Errore nel salvatagio della configurazione
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Non \u00e8 stato possibile spostare i file contenuti nel 'Corpus locale' nella postazione richiesta.\n\u00c8 possibile annullare l'operazione ora (senza che venga effettuata alcuna modifica), o \nmodificare la cartella di lavoro.\nIn quest'ultimo caso, gli eventuali file corpus o file sessione presenti nel 'Corpus locale' \nverranno spostati nell'albero 'Cartelle di lavoro' e dovranno essere importati manualmente.\nSi desidera modificare comunque la cartella di lavoro?\n\n
+ERROR\ SAVING\ CONFIGURATION=Errore nel salvataggio della configurazione
 #{0} is the filename the configuration should be written to
-COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Impossibile scrivere la nuova configurazione su {0}
+COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Impossibile scrivere la nuova configurazione in {0}
 COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Impossibile scrivere nella cartella di archiviazione. Controllo aggiornamenti non riuscito!
-THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Errore durante l'aggiornamento dell'applicazione.\nAndare sul sito internet ed eseguire l'aggiornamento tramite il link di download.\n
-THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Nuova versione disponibile.\nAndare sul sito internet ed eseguire l'aggiornamento tramite il link di download.
+THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Errore durante l'aggiornamento dell'applicazione.\nSelezionare sul sito internet il link di download ed eseguire l'aggiornamento.\n
+THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Nuova versione disponibile.\nSelezionare sul sito internet il link di download ed eseguire l'aggiornamento.
 THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Errore durante il riavvio dell'applicazione.\nL'aggiornamento sar\u00e0 reso effettivo al prossimo riavvio.\n
 ERROR=Errore
 There\ is\ a\ new\ version\ available=Nuova verione disponibile\nAggiornare ora?
@@ -69,6 +69,6 @@ There\ is\ a\ new\ version\ available=Nuova verione disponibile\nAggiornare ora?
 FAILED\ TO\ PASS\ THE\ JOURNAL\ TO\ THE\ REQUESTED\ PLUGIN=Impossibile passare il registro al plugin richiesto.
 FAILED\ TO\ ACTIVATE\ THE\ REQUESTED\ PLUGIN=Impossibile attivare il plugin richiesto.
 FAILED\ TO\ SHOW\ THE\ REQUESTED\ PLUGIN=Impossibile mostrare il plugin richiesto.
-NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per attivare questo tipo di plugin ancora inesistente.
+NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per attivare questo tipo di plugin no ancora disponibile.
 FAILED\ TO\ DEACTIVATE\ THE\ REQUESTED\ PLUGIN=Impossibile disattivare il plugin richiesto.
-NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per disattivare questo tipo di plugin ancora inesistente. 
+NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per disattivare questo tipo di plugin non ancora disponibile. 
